clusters/bosch_rke2/_cluster/default_backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: default-backend
spec:
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
        - name: default-backend
          image: ghcr.io/sikalabs/sikalabs-kubernetes-homepage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
