clusters/bosch_rke2/_cluster/default_backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default-backend
spec:
  selector:
    app: default-backend
  ports:
    - port: 8000
      targetPort: 8000
