clusters/bosch_rke2/_cluster/default_backend/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: default-backend
  namespace: default-backend
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: default-backend
          port: 8000
